# functional-kmp

./: zalgo.cabal
src/Data/List/: Kmp.hs  Zalgo.hs
src/Data/List/Kmp/: Internal.hs
src/Data/List/Zalgo/: Internal.hs
test/: Test.hs
