name:                zalgo
version:             0.1.0.0
synopsis:            Z-algorithm implemented on haskell's built-in cons-cell-based lists, allowing efficient substring search.
-- description:         
homepage:            http://github.com/mniip/zalgo
license:             BSD3
license-file:        LICENSE
author:              mniip
maintainer:          mniip@mniip.com
category:            Data
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Data.List.Zalgo, Data.List.Zalgo.Internal
  build-depends:       base >=4.8 && <4.9
  hs-source-dirs:      src
  default-language:    Haskell2010
